# claude-memory-architecture

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/mnemonic/: __init__.py  __main__.py  config.py  server.py
src/mnemonic/core/: __init__.py  export.py  memory.py  search.py
src/mnemonic/db/: __init__.py  connection.py  schema.py
