[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemonic-memory"
version = "0.1.0"
description = "AI Memory MCP Server - Persistent memory management for Claude and other AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bash", email = "bash@wishly.io" }
]
keywords = ["mcp", "memory", "ai", "claude", "anthropic", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=0.4.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
premium = [
    "openai>=1.0.0",
    "sqlite-vec>=0.1.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/bashoh/mnemonic-memory"
Documentation = "https://github.com/bashoh/mnemonic-memory#readme"
Repository = "https://github.com/bashoh/mnemonic-memory"
Issues = "https://github.com/bashoh/mnemonic-memory/issues"

[project.scripts]
mnemonic = "mnemonic:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemonic"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
